--- a/chat.css
+++ b/chat.css
@@ -33,3 +33,21 @@ body {
   overflow-y: scroll;
   word-wrap: break-word;
 }
+.loggedInContainer {
+  background-color: #ccc;
+  width: 400px;
+  height: 140px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  margin: 10px auto;
+}
+.loggedInContainer h3 {
+  padding-bottom: 10px;
+}
+.loggedInUsers {
+  background-color: #fff;
+  width: 100%;
+  height: 75px;
+  overflow-y: scroll;
+}
